welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value m
	if (a<=50 && a>=40){m=m+1}
                            ^max1020:2: error: type mismatch;
 found   : Unit
 required: Int
	if (a<=50 && a>=40){m=m+1}
        ^