welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if (a<=50 && a>=40){m=m+1}
}
